tests/snapshots/custom_menus/Admin API Tool/[Format] - ID 1.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="[Format]" id="1">
	<UUID modifications="0" userName="Mike Duncan" accountName="Admin" timestamp="2020-12-18T12:17:11">34C59F8E-6169-4A95-BA52-A23498CE25B2</UUID>
	<MenuItemList membercount="0"></MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Base name="Format" value="6"></Base>
	<Options browseMode="True" findMode="True" previewMode="True"></Options>
</CustomMenu>
