tests/snapshots/custom_menus/Admin API Tool/[Hosts] - ID 24.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="[Hosts]" id="24">
	<UUID modifications="0" userName="Mike Duncan" accountName="Admin" timestamp="2020-12-18T12:17:11">DDDE215A-DBAC-459C-A906-D164415DB784</UUID>
	<MenuItemList membercount="0"></MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Base name="Hosts" value="73"></Base>
	<Options browseMode="True" findMode="True" previewMode="True"></Options>
</CustomMenu>
