tests/snapshots/custom_menus/Admin API Tool/[Line Spacing] - ID 12.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="[Line Spacing]" id="12">
	<UUID modifications="0" userName="Mike Duncan" accountName="Admin" timestamp="2020-12-18T12:17:11">F83A0547-4C8F-4605-B987-52D0FC8911A5</UUID>
	<MenuItemList membercount="0"></MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Base name="Zeilenabstand" value="24"></Base>
	<Options browseMode="True" findMode="True" previewMode="True"></Options>
</CustomMenu>
