tests/snapshots/custom_menus/Admin API Tool/[Saved Finds] - ID 21.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="[Saved Finds]" id="21">
	<UUID modifications="0" userName="Mike Duncan" accountName="Admin" timestamp="2020-12-18T12:17:11">F31ED4FE-7024-45ED-A62B-D86CF9CF056B</UUID>
	<MenuItemList membercount="0"></MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Base name="Gespeicherte Suchen" value="199"></Base>
	<Options browseMode="True" findMode="True" previewMode="True"></Options>
</CustomMenu>
