tests/snapshots/custom_menus/Admin API Tool/[Send] - ID 22.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="[Send]" id="22">
	<UUID modifications="0" userName="Mike Duncan" accountName="Admin" timestamp="2020-12-18T12:17:11">D9A6EDD9-ACD8-469D-9084-3529675822ED</UUID>
	<MenuItemList membercount="0"></MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Base name="Senden" value="200"></Base>
	<Options browseMode="True" findMode="True" previewMode="True"></Options>
</CustomMenu>
