tests/snapshots/custom_menus/Admin API Tool/[Spelling] - ID 18.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="[Spelling]" id="18">
	<UUID modifications="0" userName="Mike Duncan" accountName="Admin" timestamp="2020-12-18T12:17:11">E0132CBB-8DAF-4293-A7E8-D61741120EDA</UUID>
	<MenuItemList membercount="0"></MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Base name="Rechtschreibung" value="19"></Base>
	<Options browseMode="True" findMode="True" previewMode="True"></Options>
</CustomMenu>
